--- a/packages/vehicle-lifecycle-vda/client/app/directives/recent-transaction-table/recent-transaction-table.less
+++ b/packages/vehicle-lifecycle-vda/client/app/directives/recent-transaction-table/recent-transaction-table.less
@@ -52,6 +52,19 @@
 				}
 				
 			}
+			.new-row:first-child{
+				@keyframes grey-to-white
+				{  
+					0% { background-color: #e3ecec; }
+					100% { background-color: transparent; }
+				}
+				td
+				{
+					animation-name: grey-to-white;  
+					animation-iteration-count: 1;  
+					animation-duration: 2s; 
+				}
+			}
 		}
 	}
 }
