--- a/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.html
+++ b/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.html
@@ -1,4 +1,12 @@
 <div class='container'>
-    <div class="title">Asset Activity {{ transactions.length }} </div>
-    <bc-asset-activity-table transactions="transactions"></bc-asset-activity-table>
+    <div class="title">
+        Asset Activity
+        <div class="times" >
+            <span class="bc-vda-last">LAST</span> 
+            <span class="time active" >24 HOURS</span> / 
+            <span class="time" >WEEK</span> / 
+            <span class="time" >MONTH</span>
+        </div>
+    </div>
+    <bc-asset-activity-table transactions="transactions" newrow="newrow"></bc-asset-activity-table>
 </div>
