clear stream and location changes

--- a/packages/prince-insurance/src/app/alert-sidebar/alert-sidebar.component.html
+++ b/packages/prince-insurance/src/app/alert-sidebar/alert-sidebar.component.html
@@ -6,8 +6,8 @@
   <div id="stream-sub" >
     Information history <span>6 months</span>
   </div>
-  <div id="alert-block-holder" ></div> <!-- WHERE THE ALERT BLOCKS ARE ADDED DYNAMICALLY -->
-  <button class="button">
+  <button class="button" (click)="clear_stream()">
     Clear Alert Stream
   </button>
+  <div id="alert-block-holder" ></div> <!-- WHERE THE ALERT BLOCKS ARE ADDED DYNAMICALLY -->
 </div>
