Live at -> lives at

--- a/packages/prince-insurance/src/app/popup/popup.component.html
+++ b/packages/prince-insurance/src/app/popup/popup.component.html
@@ -14,7 +14,7 @@
         With Prince Insurance since<br>
         November 2014<br>
         <br>
-        Live at: <br>
+        Lives at: <br>
         40 Garick Pass<br>
         Newbury<br>
         United Kingdom
