updated to breakdown manufacture process

--- a/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.less
+++ b/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.less
@@ -117,6 +117,9 @@ table{
 .manufacturer {
     border-bottom: 2px solid #e4adea;
 }
+.regulator {
+    border-bottom: 2px solid #FDE876;
+}
 
 .validator2{
     padding: 0 10px 5px 10px;
