--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
@@ -101,11 +101,17 @@
       margin-top: 15px;
     }
 
+    .not-shown
+    {
+      padding-bottom: 15px;
+    }
+
     .card-secondary
     {
       float: left;
       width: ~"calc(100% - 290px)";
-      padding-bottom: 17px;
+      padding-top: 31px;
+      padding-bottom: 31px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -118,8 +124,8 @@
       text-transform: uppercase;
       text-align: center;
       width: 175px;
-      padding-top: 25px; 
-      padding-bottom: 25px;
+      padding-top: 37.5px; 
+      padding-bottom: 37.5px;
       float: right;
       background-color: #ffd640;
     }
