--- a/packages/vehicle-lifecycle-manufacturing/client/app/directives/sidebar/sidebar.less
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/directives/sidebar/sidebar.less
@@ -9,6 +9,17 @@
   z-index: 5;
   position: relative;
 
+  .backg
+  {
+    width: 300px;
+    height: 100%;
+    background:  @grey-v-dark;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+  }
+
   .header {
     padding: 0 0 5px 0;
     display: flex;
