--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
@@ -127,7 +127,12 @@
       padding-top: 37.5px; 
       padding-bottom: 37.5px;
       float: right;
-      background-color: #ffd640;
+      background-color: @yellow;
+      cursor: pointer;
+    }
+
+    .card-yellow:hover {
+        background-color: @mustard;
     }
     
     .big-card {
