fixed actiionable insights text wrapping

--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
@@ -59,14 +59,16 @@
           </div>
         </div>
       </div>
-      <div class="card card-secondary">
-        <div class="card-block">
-          <h5 class="card-title">Actionable Insights</h5>
-          <h3>More information needed for actionable insights</h3>
+      <div class="bottom-holder" >
+        <div class="card card-secondary">
+          <div class="card-block">
+            <h5 class="card-title">Actionable Insights</h5>
+            <h3>More information needed for actionable insights</h3>
+          </div>
         </div>
-      </div>
-      <div class="card card-yellow">
-        Send report to engineering
+        <div class="card card-yellow">
+          Send report to engineering
+        </div>
       </div>
     </div>
     <div class="right" >
