shortened temperature to temp to better fit katherines screen

--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
@@ -29,10 +29,10 @@
               <h3 style="text-transform: uppercase"><strong>overheat</strong></h3>
           </div>
           <p class="alert-data alert-data-red" >
-            <span class="field">Engine Temperature</span><span class="data">{{event.engine_temperature}}C</span>
+            <span class="field">Engine Temp.</span><span class="data">{{event.engine_temperature}}C</span>
           </p>
           <p class="alert-data alert-data-green" >
-            <span class="field">Air Temperature</span><span class="data">{{event.air_temperature}}C</span>
+            <span class="field">Air Temp.</span><span class="data">{{event.air_temperature}}C</span>
           </p>
           <p class="alert-data alert-data-green" >
             <span class="field">Acceleration</span><span class="data">{{event.acceleration}}G</span>
@@ -81,7 +81,7 @@
                   <p style="margin: 10px 0 5px;">S/N {{similar_failure.serial_number}}</p>
               </div>
               <p class="alert-data alert-data-red" >
-                  <span class="field">Engine Temperature</span><span class="data">{{similar_failure.engine_temperature}}C</span>
+                  <span class="field">Engine Temp.</span><span class="data">{{similar_failure.engine_temperature}}C</span>
               </p>
           </div>
       </div>
