insights year -> week

--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.html
@@ -51,7 +51,7 @@
         <div class="card-block" >
           <div class="card-header">
             <h5>INSIGHT</h5>
-            <h3><strong>{{event.num_failed}}</strong> Arium {{event.car_model}} failure this year due to Overheating</h3>
+            <h3><strong>{{event.num_failed}}</strong> Arium {{event.car_model}} failure this week due to Overheating</h3>
           </div>
           <div class="common-factor-block">
             <span>Common Factor</span>
