vda auto update header, car builder policy sent back

--- a/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.html
+++ b/packages/vehicle-lifecycle-vda/client/app/views/asset_activity/asset_activity.html
@@ -1,3 +1,4 @@
+<bc-vda-header transactions="transactions"></bc-vda-header>
 <div class='container'>
     <div class="title">
         Asset Activity
