--- a/packages/vehicle-lifecycle-vda/client/app/views/dashboard/dashboard.html
+++ b/packages/vehicle-lifecycle-vda/client/app/views/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 <div class="bc-vda-dashboard">
+  <bc-vda-header transactions="transactions"></bc-vda-header>
   <div class="bc-vda-bc-view-container">
     <div class="bc-vda-bc-view-background">
       <bc-view chain="chain"></bc-view>
