--- a/packages/vehicle-lifecycle-vda/client/app/views/suspicious_vehicles/suspicious_vehicles.html
+++ b/packages/vehicle-lifecycle-vda/client/app/views/suspicious_vehicles/suspicious_vehicles.html
@@ -1,3 +1,4 @@
+<bc-vda-header transactions="transactions"></bc-vda-header>
 <div class="bc-vda-suspicious-vehicles">
 	<div class="bc-vda-suspicious-vehicles-table-container">
 		<bc-suspicious-vehicles-table vehicles="vehicles"></bc-suspicious-vehicles-table>
