updated to fix scrolling bug;

--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/dashboard/dashboard.less
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/dashboard/dashboard.less
@@ -2,6 +2,8 @@
 
 .bc-man-dashboard {
   width: 100%;
+  padding: 0 0 0 300px;
+  box-sizing: border-box;
   margin: 42px 52px;
 
   h1 {
@@ -10,6 +12,7 @@
     justify-content: space-between;
 
     .search {
+      float: right;
       display: flex;
       align-items: center;
 
