updated to fix scrolling bug;

--- a/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
+++ b/packages/vehicle-lifecycle-manufacturing/client/app/views/reports/reports.less
@@ -2,6 +2,8 @@
 
 .bc-man-reports {
   width: 100%;
+  padding: 0 0 0 300px;
+  box-sizing: border-box;
   margin: 42px 52px;
 
   h1 {
@@ -74,7 +76,7 @@
         margin-top: 5px;
       }
       .alert-data {
-      
+
         width: 100%;
         display: inline-block;
 
@@ -106,7 +108,7 @@
       padding-bottom: 15px;
     }
 
-    .bottom-holder 
+    .bottom-holder
     {
       position: relative;
       .card-secondary
@@ -122,7 +124,7 @@
         text-overflow: ellipsis;
         display: inline-block;
       }
-  
+
       .card-yellow {
         position: absolute;
         top: 0px;
@@ -143,12 +145,12 @@
         justify-content: center;
         flex-direction: column;
       }
-  
+
       .card-yellow:hover {
           background-color: @mustard;
       }
     }
-    
+
     .big-card {
       overflow: hidden;
       margin-right: 20px;
@@ -163,7 +165,7 @@
         }
 
         .alert-data {
-          
+
           width: ~'calc(50% - 30px)';
         }
 
