Added tutorial app with app in app for all apps
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-manufacture-car-builder/src/theme/variables.scss
+++ b/packages/vehicle-manufacture-car-builder/src/theme/variables.scss
@@ -200,6 +200,7 @@ ion-app {
       padding-right: 0 !important;
       padding-top: 80px !important;
       -webkit-overflow-scrolling: auto;
+      overflow: auto;
     }
 
     ion-card.card {
