--- a/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.html
+++ b/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.html
@@ -5,7 +5,7 @@
     Dashboard
     <div class="search">
       <input type="text" name="search" placeholder="Search Arium"></input>
-      <img src="../../../assets/images/paul.png" alt="Profile">
+      <img src="/manufacturer/assets/images/paul.png" alt="Profile">
     </div>
   </h1>
 
@@ -109,9 +109,9 @@
       </h5>
 
       <div class="graphs">
-        <img src="../../../assets/images/Graph 1.svg" alt="Cars Produced">
-        <img src="../../../assets/images/Graph 2.svg" alt="Queued Drills">
-        <img src="../../../assets/images/Graph 3.svg" alt="Complete Stops">
+        <img src="/manufacturer/assets/images/Graph 1.svg" alt="Cars Produced">
+        <img src="/manufacturer/assets/images/Graph 2.svg" alt="Queued Drills">
+        <img src="/manufacturer/assets/images/Graph 3.svg" alt="Complete Stops">
       </div>
     </div>
   </div>
