--- a/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/common.less
+++ b/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/common.less
@@ -1,3 +1,12 @@
+@import "./colours.less";
+@import "./font.less";
+
+@sidebar-expanded: 450px;
+@sidebar-contracted: 85px;
+
 body {
-    font-family: sans-serif;
+    font-family: @plainFont;
+    font-weight: @light;
+    background-color: @pale-grey;
+    color: @black;
 }
