--- a/packages/vehicle-manufacture-tutorial/client/app/views/tutorial/tutorial.less
+++ b/packages/vehicle-manufacture-tutorial/client/app/views/tutorial/tutorial.less
@@ -11,33 +11,49 @@
     .application {
         flex-grow: 2;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
-        .holder {
+        justify-content: flex-start;
+        position: relative;
 
-            height: 100%;
+        .applicationSpace {
             width: 100%;
+            display: flex;
+            flex: 1;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
 
-            &.hidden {
-                height: 0!important;
-                width: 0!important;
-                padding: 0!important;
+            .loading {
+                &.hidden {
+                    display: none;
+                }
             }
 
-            &.small {
-                border-radius: 45px;
-                padding: 88px 10px;
-                background-color: #000;
-                width: 375px;
-                height: 667px;
-            }
-
-            iframe {
-                border: #000;
+            .holder {
                 height: 100%;
                 width: 100%;
+
+                &.hidden {
+                    height: 0!important;
+                    width: 0!important;
+                    padding: 0!important;
+                }
+
+                &.small {
+                    border-radius: 45px;
+                    padding: 88px 10px;
+                    background-color: #000;
+                    width: 375px;
+                    height: 667px;
+                }
+
+                iframe {
+                    border: #000;
+                    height: 100%;
+                    width: 100%;
+                }
             }
         }
     }
-
 }
