--- a/packages/vehicle-manufacture-car-builder/src/components/car-slide/car-slide.html
+++ b/packages/vehicle-manufacture-car-builder/src/components/car-slide/car-slide.html
@@ -1,4 +1,4 @@
-<ion-card (click)="build(car)">
+<ion-card class="slideEl" (click)="build(car)">
   <div class="header">
     <h3>Car</h3>
     <h2><strong>Arium</strong> {{car.name}}</h2>
