tutorial in read me
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.html
+++ b/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.html
@@ -86,7 +86,7 @@
           <div class="card-block">
             <h5 class="card-title">Manufacture</h5>
 
-            <button class="btn btn-primary" ng-click="start(order)">Start Manufacture</button>
+            <button class="start-manufacture btn btn-primary" ng-click="start(order)">Start Manufacture</button>
           </div>
         </div>
 
