--- a/packages/vehicle-manufacture-tutorial/client/app/directives/notification/notification.less
+++ b/packages/vehicle-manufacture-tutorial/client/app/directives/notification/notification.less
@@ -3,80 +3,74 @@
 
 @notification-width: 300px;
 
-tut-notification {
+.notification {
+    padding: 23px;
+    border: 2px solid @white;
+    background-color: @white;
+    width: @notification-width;
     position: absolute;
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.05);
 
-    .notification {
-        padding: 23px;
-        border: 2px solid @white;
-        background-color: @white;
-        width: @notification-width;
+    &.top {
+        top: calc(70px + 1em);
+    }
+
+    &.bottom {
+        bottom: 50px;
+    }
+
+    &.left {
+        left: 50px;
+    }
+
+    &.right {
+        left: calc(100% - @notification-width - 50px);
+    }
+
+    &.fade {
+        animation-name: fadeIn;
+        animation-duration: 1s;
+    }
+
+    &.border {
+        animation-name: fadeBorder;
+        animation-duration: 1s;
+    }
+
+    .title {
+        font-weight: @bold;
+        margin-bottom: 10px;
+    }
+
+    .close {
         position: absolute;
-        box-sizing: border-box;
+        right: 10px;
+        top: 10px;
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
 
-        &.top {
-            top: calc(50px + 1em);
-        }
-
-        &.bottom {
-            bottom: 50px;
-        }
-
-        &.left {
-            left: 50px;
-        }
-
-        &.right {
-            left: calc(100% - @notification-width - 50px);
-        }
-
-        &.fade {
-            animation-name: fadeIn;
-            animation-duration: 1s;
-        }
-
-        &.border {
-            animation-name: fadeBorder;
-            animation-duration: 1s;
-        }
-
-        .title {
-            font-weight: @bold;
-            margin-bottom: 10px;
-        }
-
-        .close {
+        &:before, &:after {
             position: absolute;
-            right: 10px;
-            top: 10px;
-            cursor: pointer;
+            left: 7px;
+            content: ' ';
             height: 15px;
-            width: 15px;
+            width: 2px;
+            background-color: @black;
+        }
+
+        &:before {
+            transform: rotate(45deg);
+        }
+        &:after {
+            transform: rotate(-45deg);
+        }
+
+        &:hover {
 
             &:before, &:after {
-                position: absolute;
-                left: 7px;
-                content: ' ';
-                height: 15px;
-                width: 2px;
-                background-color: @black;
-            }
-    
-            &:before {
-                transform: rotate(45deg);
-            }
-            &:after {
-                transform: rotate(-45deg);
-            }
-
-            &:hover {
-
-                &:before, &:after {
-                    width: 2.5px;
-                }
+                width: 2.5px;
             }
         }
     }
