--- a/packages/vehicle-manufacture-tutorial/client/app/views/tutorial/tutorial.less
+++ b/packages/vehicle-manufacture-tutorial/client/app/views/tutorial/tutorial.less
@@ -23,6 +23,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            overflow: auto;
 
             .loading {
                 &.hidden {
@@ -41,11 +42,31 @@
                 }
 
                 &.small {
-                    border-radius: 45px;
-                    padding: 88px 10px;
-                    background-color: #000;
-                    width: 375px;
                     height: 667px;
+                    width: 375px;
+                }
+
+                @media only screen and (min-height : 650px) and (max-height : 750px) {
+                    &.small {
+                        height: 600px;
+                        width: 338px;
+                    }
+                }
+
+                @media only screen and (min-height : 550px) and (max-height : 650px) {
+                    &.small {
+                        padding: 0;
+                        height: 500px;
+                        width: 281px;
+                    }
+                }
+
+                @media only screen and (min-height : 0px) and (max-height : 550px) {
+                    &.small {
+                        padding: 0;
+                        height: 390px;
+                        width: 220px;
+                    }
                 }
 
                 iframe {
