--- a/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/colours.less
+++ b/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/colours.less
@@ -1,6 +1,7 @@
 @dark-grey-blue: #1B2834;
-@bright-blue: #047CC0;
+@darker-grey-blue: #1B2834;
+@bright-blue: #56ACF2;
 @white: #FFF;
 @pale-grey: #F6F6F6;
-@grey: #949394;
+@grey: #777677;
 @black: #000;
