--- a/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/common.less
+++ b/packages/vehicle-manufacture-tutorial/client/assets/stylesheets/common.less
@@ -1,12 +1,13 @@
 @import "./colours.less";
 @import "./font.less";
 
-@sidebar-expanded: 450px;
-@sidebar-contracted: 85px;
+@sidebar-expanded: 375px;
+@sidebar-contracted: 60px;
 
 body {
     font-family: @plainFont;
     font-weight: @light;
+    font-size: 10pt;
     background-color: @pale-grey;
     color: @black;
 }
