--- a/packages/vehicle-manufacture-car-builder/src/components/header/header.html
+++ b/packages/vehicle-manufacture-car-builder/src/components/header/header.html
@@ -2,8 +2,7 @@
   <ion-navbar>
     <ion-title>
       <img src="assets/logo.png" class="logo" (click)="back()" />
-      <h1>Build your car</h1>
-      <img src="assets/paul.png" class="paul" />
+      <h1>Arium Configurator</h1>
     </ion-title>
   </ion-navbar>
 </ion-header>
